[tool.poetry]
name = "network_automation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
numpy = "^1.20.3"
DateTime = "^4.3"
pyfiglet = "^0.8.post1"
multiping = "^1.1.2"
paramiko = "^2.7.2"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
